--- a/web/src/pages/Orphnage/orphnage.css
+++ b/web/src/pages/Orphnage/orphnage.css
@@ -140,6 +140,12 @@
   color: #37C77F;
 }
 
+.orphnage-details .orphnage-details-content .open-details div.open-on-weekends.dont-open {
+  background: linear-gradient(154.16deg, #FDF0F5 7.85%, #FFFFFF 91.03%);
+  border: 1px solid #FF8CD4;
+  color: #FF669D;
+}
+
 .orphnage-details .orphnage-details-content button.contact-button {
   margin-top: 64px;
 
